--- a/data/translations/en.json
+++ b/data/translations/en.json
@@ -16,7 +16,7 @@
     "tooltip_user_choices": "The security that your password will have against an attack",
     "enter_password": "Enter Password:",
     "enter_password_placeholder": "Type your password here",
-    "chosen_password_uses": "Chosen Password Uses:",
+    "chosen_password_uses": "Number of different services in which you use this password",
     "more_than_3": "More than 3",
 
     "tfa_yes": "Provides two-factor authentication",
