--- a/data/translations/es.json
+++ b/data/translations/es.json
@@ -1,6 +1,6 @@
 {
     "title": "Medidor de Riesgo de Contraseña",
-    "research_info": "Este sitio web, diseñado como parte del proyecto de investigación <a href='https://cosec.inf.uc3m.es/projects/apamciber/'><strong>APAMCiber</strong></a> (Atribución y Prevención de Amenazas con Impacto en Múltiples Grupos Relevantes en Ciberseguridad), dirigido por Lorena González Manzano (lgmanzan@inf.uc3m.es), financiado por INCIBE y realizado en la Universidad Carlos III de Madrid, tiene como objetivo validar el medidor de riesgo de contraseñas desarrollado para el proyecto. No se recopilan datos personales.",
+    "research_info": "Este sitio web, diseñado como parte del proyecto de investigación <a href='https://cosec.inf.uc3m.es/projects/apamciber/'><strong>APAMCiber</strong></a> (Atribución y Prevención de Amenazas con Impacto en Múltiples Grupos Relevantes en Ciberseguridad), dirigido por Lorena González Manzano (lgmanzan@inf.uc3m.es), financiado por INCIBE y realizado en la Universidad Carlos III de Madrid, tiene como objetivo validar el medidor de riesgo de contraseñas desarrollado para el proyecto. <strong>NO SE RECOGE NI LA CONTRASEÑA NI NINGÚN OTRO DATO DEL USUARIO</strong>",
     "search_service": "Buscar servicio...",
     "no_services_found": "No se encontraron servicios",
     "error_fetching_services": "Error al obtener los servicios",
@@ -57,7 +57,7 @@
     "legend_big": "Riesgo alto",
     "legend_very_big": "Riesgo muy alto",
 
-    "data_privacy_notice": "Todos los datos ingresados por el usuario se procesan localmente y no se recopilan ni almacenan datos.",
+    "data_privacy_notice": "Todos los nombres de servicios mencionados son puramente ficticios y con fines ilustrativos. Los valores no reflejan la seguridad real de los servicios mencionados. Todos los datos ingresados por el usuario se procesan localmente y no se recopilan ni almacenan datos.",
 
     "popup_title": "Bienvenido al Medidor de Riesgo de Contraseña",
     "popup_description": "Sigue estos pasos para evaluar tu riesgo:",
